<resources>
    <string name="app_name">Para Sayar</string>

    <string name="trans">Trans</string>
    <string name="stats">Stats</string>
    <string name="accounts">Accounts</string>
    <string name="more">More</string>
    <string name="daily">Daily</string>
    <string name="calendar">Calendar</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="total">Total</string>
    <string name="date">Date</string>
    <string name="this_month">THIS MONTH</string>
    <string name="jan">JAN</string>
    <string name="feb">FEB</string>
    <string name="mar">MAR</string>
    <string name="apr">APR</string>
    <string name="may">MAY</string>
    <string name="jun">JUN</string>
    <string name="jul">JUL</string>
    <string name="aug">AUG</string>
    <string name="sep">SEP</string>
    <string name="oct">OCT</string>
    <string name="nov">NOV</string>
    <string name="dec">DEC</string>
    <string name="assets">Assets</string>
    <string name="liabilities">Liabilities</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="add_account">Add Account</string>
    <string name="group">Group</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="currency">Currency</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="account_group">Account Group</string>
    <string name="expense">Expense</string>
    <string name="transfer">Transfer</string>
    <string name="fees">Fees</string>
    <string name="to">To</string>
    <string name="category">Category</string>
    <string name="account">Account</string>
    <string name="from">From</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="invalid_account_name">Please choose account</string>
    <string name="invalid_category_name">Please choose category</string>
    <string name="invalid_to_account_name">Please choose \"to\" account</string>
    <string name="invalid_amount">Please input amount</string>
    <string name="done">Done</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thur">Thur</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="same_account_error">From account and To account cannot be same</string>
    <string name="Others">Others</string>
    <string name="add_currency">Add currency</string>
    <string name="currencies">Currencies</string>
    <string name="account_setting">Account Setting</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_account_title">Delete Account</string>
    <string name="delete_account_message">Are you sure to delete Account</string>
    <string name="delete_currency_title">Delete Currency</string>
    <string name="delete_currency_message">Are you sure to delete Currency?</string>
    <string name="cash">Cash</string>
    <string name="delete_account_group_title">Delete Account Group</string>
    <string name="delete_account_group_message">Are you sure to delete Account Group</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="add_account_group">Add Account Group</string>
    <string name="delete_category_title">Delete Category</string>
    <string name="delete_category_message">Are you sure to delete Category</string>
    <string name="expenses_category">Expenses Category</string>
    <string name="income_category">Income Category</string>
    <string name="delete_subcategory_title">Delete Subcategory</string>
    <string name="delete_subcategory_message">Are you sure to delete Subcategory</string>
    <string name="subcategory">Subcategory</string>
    <string name="modify_subcategory">Modify Subcategory</string>
    <string name="balance">Balance</string>
    <string name="statement">Statement</string>
    <string name="annually">Annually</string>
    <string name="period">Period</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="about_us">About us</string>
    <string name="app_website">App website</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="term_of_service">Term of service</string>
    <string name="sign_out">Sign out</string>
    <string name="setting">Setting</string>
    <string name="configuration">Configuration</string>
    <string name="income_category_setting">Income Category Setting</string>
    <string name="expenses_category_setting">Expenses Category Setting</string>
    <string name="account_group_setting">Account Group Setting</string>
    <string name="accounts_setting">Accounts Setting</string>
    <string name="currency_setting">Currency Setting</string>
    <string name="set_currency_message">Are you sure to set currency as default currency?</string>
    <string name="set_currency_title">Update default currency</string>
    <string name="enter_your_email_address_and_password">Enter your email address and password</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="last_name">Last name</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="phone_number">Phone number</string>
    <string name="continue_text">Continue</string>
    <string name="default_currency">Default currency</string>
    <string name="enter_your_informations">Enter your information</string>
    <string name="error_message">Something went wrong</string>
    <string name="please_input_email_address">Please input email address</string>
    <string name="please_input_password">Please input password</string>
    <string name="back">Back</string>
    <string name="send">Send</string>
    <string name="please_check_your_mail">"Please check your email "</string>
    <string name="password_characters_error">Password should be minimum 6 characters</string>
    <string name="input_first_name">Please input first name</string>
    <string name="input_last_name">Please input last name</string>
    <string name="input_phone_number">Please input phone number</string>
    <string name="choose_default_currency">Please select default currency</string>
    <string name="about_us_text">By combining user-friendly designs with up-to-date and innovative technologies, we offer compatible and convenient applications free of charge.</string>
    <string name="please_input_first_and_lastname">Please Input firstname and lastname</string>
    <string name="sign_out_message">Are you sure to sign out?</string>
    <string name="budget">Budget</string>
    <string name="budget_setting">Budget Setting</string>
    <string name="total_budget">Total Budget</string>
    <string name="excess">Excess</string>
    <string name="add_budget">Add Budget</string>
    <string name="delete_budget_title">Delete Budget</string>
    <string name="delete_budget_message">Are you sure to delete Budget?</string>
    <string name="used_amount">Used amount</string>
    <string name="remaining">Remaining</string>
    <string name="note">Note</string>
    <string name="change_category">Change Category</string>
    <string name="delete_trans_title">Delete Trans.</string>
    <string name="delete_trans_message">Are you sure to delete Trans.?</string>
    <string name="edit">Edit</string>

</resources>