<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="?attr/background_color"
    tools:context=".feature_settings.presentation.configuration.ConfigurationFragment">

    <LinearLayout
        android:id="@+id/account_settings_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:weightSum="10"
        android:background="?attr/white">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_arrow_back_24"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/configuration"
            android:layout_weight="8"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="?attr/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:background="?attr/white">


        <TextView
            android:id="@+id/income_setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:text="@string/income_category_setting"
            android:textAlignment="textStart"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:textColor="?attr/black"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:alpha=".5"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="?attr/black" />

        <TextView
            android:id="@+id/expenses_setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:text="@string/expenses_category_setting"
            android:textAlignment="textStart"
            android:paddingStart="20dp"
            android:layout_marginBottom="20dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="20dp"
            android:textColor="?attr/black"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:alpha=".5"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="?attr/black" />

        <TextView
            android:id="@+id/account_group_setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:text="@string/account_group_setting"
            android:textAlignment="textStart"
            android:layout_marginBottom="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="20dp"
            android:textColor="?attr/black"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:alpha=".5"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="?attr/black" />

        <TextView
            android:id="@+id/accounts_setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:text="@string/accounts_setting"
            android:textAlignment="textStart"
            android:layout_marginBottom="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="20dp"
            android:textColor="?attr/black"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:alpha=".5"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="?attr/black" />

        <TextView
            android:id="@+id/currency_setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:text="@string/currency_setting"
            android:textAlignment="textStart"
            android:paddingStart="20dp"
            android:layout_marginBottom="20dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="20dp"
            android:textColor="?attr/black"
            android:textSize="15sp" />


    </LinearLayout>

</LinearLayout>